--- a/home/wiki/Change_log.html
+++ b/home/wiki/Change_log.html
@@ -1728,7 +1728,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Databases/Overview.html" id="xolnki_29" title="App/Databases/Overview">App/Databases/Overview</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Databases/Overview.html" id="xolnki_29" title="App/Databases/Overview" class="xowa-visited">App/Databases/Overview</a>
       </dd>
     </dl>
     <h2>
