--- a/home/wiki/Options/Page_sync.html
+++ b/home/wiki/Options/Page_sync.html
@@ -326,7 +326,7 @@ li.active a, li.active a:hover
               Enable automatic syncs: <sup id="cite_ref-auto_enabled_1-0" class="reference"><a href="#cite_note-auto_enabled-1">[2]</a></sup>
             </td>
             <td>
-              <input xowa_prop="xowa.api.addon.bldr.sync.auto_enabled" type="checkbox" class="options_checkbox" id='xowa_prop_1' checked='checked'>
+              <input xowa_prop="xowa.api.addon.bldr.sync.auto_enabled" type="checkbox" class="options_checkbox" id='xowa_prop_1'>
             </td>
           </tr>
           <tr>
