--- a/home/wiki/App/Import/Download_Central.html
+++ b/home/wiki/App/Import/Download_Central.html
@@ -81,7 +81,7 @@
       <span class="mw-headline" id="Overview">Overview</span>
     </h2>
     <p>
-      As of v3.6.3, the <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_2" title="Special:XowaDownloadCentral" class="xowa-visited">Download Central</a> page lists available wikis for download.
+      As of v3.6.3, the <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_2" title="Special:XowaDownloadCentral">Download Central</a> page lists available wikis for download.
     </p>
     <p>
       The advantages are as follows
