--- a/home/wiki/App/Import/Import_overview.html
+++ b/home/wiki/App/Import/Import_overview.html
@@ -45,7 +45,7 @@
       <span class="mw-headline" id="Import_HTML_dumps_from_archive.org">Import HTML dumps from archive.org</span>
     </h2>
     <p>
-      The <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_2" title="Special:XowaDownloadCentral" class="xowa-visited">Download Central</a> page lists wikis that can be downloaded from archive.org.
+      The <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_2" title="Special:XowaDownloadCentral">Download Central</a> page lists wikis that can be downloaded from archive.org.
     </p>
     <ul>
       <li>
@@ -82,7 +82,7 @@
       <span class="mw-headline" id="Import_offline_by_script">Import offline by script</span>
     </h2>
     <p>
-      The <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_6" title="Dashboard/Import/Offline" class="xowa-visited">Import offline</a> page can generate a script that will import a wiki.
+      The <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_6" title="Dashboard/Import/Offline">Import offline</a> page can generate a script that will import a wiki.
     </p>
     <ul>
       <li>
