--- a/home/wiki/Change_log.html
+++ b/home/wiki/Change_log.html
@@ -468,7 +468,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_8" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_8" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </dd>
     </dl>
     <ul>
@@ -601,7 +601,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_13" title="Wiki setup/German wikis" class="xowa-visited">Wiki_setup/German_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_13" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
       </dd>
     </dl>
     <h3>
@@ -895,7 +895,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Include latest download central database.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_15" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a> <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_16" title="Wiki setup/German wikis" class="xowa-visited">Wiki_setup/German_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_15" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a> <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_16" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
       </dd>
     </dl>
     <h2>
@@ -921,7 +921,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_18" title="Wiki setup/German wikis" class="xowa-visited">Wiki_setup/German_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_18" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
       </dd>
     </dl>
     <h3>
@@ -1127,7 +1127,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Listing.html" id="xolnki_21" title="Wiki setup/Listing" class="xowa-visited">Wiki_setup/Listing</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Listing.html" id="xolnki_21" title="Wiki setup/Listing">Wiki_setup/Listing</a>
       </dd>
     </dl>
     <ul>
@@ -1728,7 +1728,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Databases/Overview.html" id="xolnki_29" title="App/Databases/Overview" class="xowa-visited">App/Databases/Overview</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Databases/Overview.html" id="xolnki_29" title="App/Databases/Overview">App/Databases/Overview</a>
       </dd>
     </dl>
     <h2>
@@ -1901,7 +1901,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_32" title="Options/Import" class="xowa-visited">Options/Import</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_32" title="Options/Import">Options/Import</a>
       </dd>
     </dl>
     <ul>
