--- a/home/wiki/Change_log/2015.html
+++ b/home/wiki/Change_log/2015.html
@@ -549,7 +549,7 @@
     </p>
     <ul>
       <li>
-        Javascript: Position notification in "top center" not "top right". See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_5" title="Options/Window" class="xowa-visited">Options/Window</a>
+        Javascript: Position notification in "top center" not "top right". See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_5" title="Options/Window">Options/Window</a>
       </li>
     </ul>
     <p>
@@ -557,7 +557,7 @@
     </p>
     <ul>
       <li>
-        Diagnostics: Fix broken diagnostic for Wikivoyage. See: <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_6" title="Diagnostics/Xtns/Wikivoyage/All" class="xowa-visited">Diagnostics/Xtns/Wikivoyage/All</a>
+        Diagnostics: Fix broken diagnostic for Wikivoyage. See: <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_6" title="Diagnostics/Xtns/Wikivoyage/All">Diagnostics/Xtns/Wikivoyage/All</a>
       </li>
     </ul>
     <p>
@@ -845,7 +845,7 @@
     </p>
     <ul>
       <li>
-        Setup: Restore save icon for Option pages {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_11" title="Options/Window" class="xowa-visited">Options/Window</a> [broken since:v2.8.5]
+        Setup: Restore save icon for Option pages {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_11" title="Options/Window">Options/Window</a> [broken since:v2.8.5]
       </li>
     </ul>
     <p>
@@ -1416,7 +1416,7 @@
     </p>
     <ul>
       <li>
-        Import.Online: Fix import not using the most recent good dump (affects downloads occuring from your.org for partial dumps) {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_19" title="Options/Import" class="xowa-visited">Options/Import</a> [broken since:v2.7.3.1]
+        Import.Online: Fix import not using the most recent good dump (affects downloads occuring from your.org for partial dumps) {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_19" title="Options/Import">Options/Import</a> [broken since:v2.7.3.1]
       </li>
     </ul>
     <h2>
@@ -1441,7 +1441,7 @@
         Edit: Fix missing edit-toolbar.js b/c of broken path {detected by gnosygnu.gui}. [broken since:v1.10.2]
       </li>
       <li>
-        Options: Fix "Page storage format" not working {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_21" title="Options/Import" class="xowa-visited">Options/Import</a> [broken since:v2.4.1]
+        Options: Fix "Page storage format" not working {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_21" title="Options/Import">Options/Import</a> [broken since:v2.4.1]
       </li>
       <li>
         HttpServer: Fix wrong Main Page when clicking on wiki in sidebar; EX:click on zh.w in sidebar -&gt; Wikipedia:首页 x&gt; Main_Page {detected by anonymous4}. [broken since:v2.7.2]
@@ -1611,7 +1611,7 @@
         Gui.Status: Default to showing full url, not shortened one; EX:"home/wiki/Main_Page" not "home/Main_Page" {detected by pirate}.
       </li>
       <li>
-        Options: Add option to show short link. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_25" title="Options/Window" class="xowa-visited">Options/Window</a>
+        Options: Add option to show short link. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_25" title="Options/Window">Options/Window</a>
       </li>
     </ul>
     <p>
@@ -1926,7 +1926,7 @@
     </p>
     <ul>
       <li>
-        Parser: Clear page variables in prefs_mgr (affects duplicate references on Option pages) {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_39" title="Options/Window" class="xowa-visited">Options/Window</a>
+        Parser: Clear page variables in prefs_mgr (affects duplicate references on Option pages) {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_39" title="Options/Window">Options/Window</a>
       </li>
     </ul>
     <p>
@@ -2067,7 +2067,7 @@
     </p>
     <ul>
       <li>
-        Options: Redesign Option pages to use tab interface {contributed by anonymous4}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_40" title="Options/Window" class="xowa-visited">Options/Window</a>
+        Options: Redesign Option pages to use tab interface {contributed by anonymous4}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_40" title="Options/Window">Options/Window</a>
       </li>
       <li>
         Gui: Reduce page load errors due to popups (affects page sometimes loading incorrectly when popup is also loading); EX:hover over link and middle-click on it {detected by gnosygnu.gui}. See: <a href="https://en.wikipedia.org/wiki/Mark_Rolston" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Mark_Rolston</a> (See [[Private Mark Drake]] link)
@@ -2513,7 +2513,7 @@
     </p>
     <ul>
       <li>
-        Gui: Limit selection of dumps to files with .bz2 or .xml. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_50" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        Gui: Limit selection of dumps to files with .bz2 or .xml. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_50" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </li>
       <li>
         Gui: Add "please wait" message when building SQLite indexes.
