--- a/home/wiki/Diagnostics/Scribunto/LuaCommon.html
+++ b/home/wiki/Diagnostics/Scribunto/LuaCommon.html
@@ -25,7 +25,7 @@
         Calls code in 
         <ul>
           <li>
-            <a href="http://xowa.org/home/wiki/Module:Diagnostics/LuaCommon.html" id="xolnki_2" title="Module:Diagnostics/LuaCommon">Module:Diagnostics/LuaCommon</a>
+            <a href="http://xowa.org/home/wiki/Module:Diagnostics/LuaCommon.html" id="xolnki_2" title="Module:Diagnostics/LuaCommon" class="xowa-visited">Module:Diagnostics/LuaCommon</a>
           </li>
           <li>
             <a href="http://xowa.org/home/wiki/Template:Diagnostics/LuaCommon/getFrameTitle_parent.html" id="xolnki_3" title="Template:Diagnostics/LuaCommon/getFrameTitle parent">Template:Diagnostics/LuaCommon/getFrameTitle parent</a>
