--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -157,7 +157,7 @@
         </dl>
       </dd>
       <dd>
-        Feel free to look around during the import process. You can start at <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_6" title="Help/Contents">Help/Contents</a>. When the process completes, it will open Simple Wikipedia.
+        Feel free to look around during the import process. You can start at <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_6" title="Help/Contents" class="xowa-visited">Help/Contents</a>. When the process completes, it will open Simple Wikipedia.
       </dd>
     </dl>
     <dl>
@@ -197,7 +197,7 @@
     </h5>
     <ul>
       <li>
-        <b>Import from a dump file</b>: See <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_12" title="Dashboard/Import/Offline" class="xowa-visited">import offline</a>.
+        <b>Import from a dump file</b>: See <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_12" title="Dashboard/Import/Offline">import offline</a>.
       </li>
     </ul>
     <h5>
@@ -205,7 +205,7 @@
     </h5>
     <ul>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_13" title="Special:XowaDownloadCentral" class="xowa-visited">Special:XowaDownloadCentral</a>
+        Go to <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_13" title="Special:XowaDownloadCentral">Special:XowaDownloadCentral</a>
       </li>
       <li>
         Add your wikis to the Queue
@@ -222,7 +222,7 @@
     </h5>
     <ul>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Wiki_setup/Listing.html" id="xolnki_15" title="Wiki setup/Listing" class="xowa-visited">Wiki_setup/Listing</a>
+        Go to <a href="http://xowa.org/home/wiki/Wiki_setup/Listing.html" id="xolnki_15" title="Wiki setup/Listing">Wiki_setup/Listing</a>
       </li>
       <li>
         Navigate to your wiki page from the list
@@ -242,7 +242,7 @@
         v3.9.2 features a new Category system. See <a href="http://xowa.org/home/wiki/App/Category.html" id="xolnki_16" title="App/Category">Category Overview</a>
       </li>
       <li>
-        v3.6.3 features a Download page. See <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_17" title="Special:XowaDownloadCentral" class="xowa-visited">Download Central</a>
+        v3.6.3 features a Download page. See <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_17" title="Special:XowaDownloadCentral">Download Central</a>
       </li>
       <li>
         v3.3.4 features an auto-complete address bar. It also has a faster Search system. See <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_18" title="App/Search">App/Search</a>
@@ -303,7 +303,7 @@
             If the font size is too small, right-click and choose Font Increase
           </li>
           <li>
-            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_26" title="Options/Window" class="xowa-visited">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_27" title="Options/HTML">Options/HTML</a>
+            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_26" title="Options/Window">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_27" title="Options/HTML">Options/HTML</a>
           </li>
         </ul>
       </li>
@@ -339,7 +339,7 @@
     </dl>
     <ul>
       <li>
-        <b>Middle-click on link</b>: Open a tab in a new link by middle-clicking on it. Try middle-clicking the following: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_31" title="Options" class="xowa-visited">Options</a>
+        <b>Middle-click on link</b>: Open a tab in a new link by middle-clicking on it. Try middle-clicking the following: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_31" title="Options">Options</a>
       </li>
       <li>
         <b>Right-click</b>: Right click on an image and click save as file
@@ -359,7 +359,7 @@
     <table class="wikitable">
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_33" title="Special:XowaDownloadCentral" class="xowa-visited">Download Central</a>
+          <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_33" title="Special:XowaDownloadCentral">Download Central</a>
         </td>
         <td>
           Download an Android-ready wiki with images from archive.org
@@ -375,7 +375,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_35" title="Dashboard/Import/Offline" class="xowa-visited">Import Offline</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_35" title="Dashboard/Import/Offline">Import Offline</a>
         </td>
         <td>
           Import a wiki through a dump; import also through script; also upgrade category to version 2
@@ -407,7 +407,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_39" title="Help/Contents">Contents</a>
+          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_39" title="Help/Contents" class="xowa-visited">Contents</a>
         </td>
         <td>
           View all help topics
@@ -415,7 +415,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_40" title="Options" class="xowa-visited">Options</a>
+          <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_40" title="Options">Options</a>
         </td>
         <td>
           Configure XOWA options
