--- a/home/wiki/Options.html
+++ b/home/wiki/Options.html
@@ -320,7 +320,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_2" title="Options/Window" class="xowa-visited">Window</a>
+              <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_2" title="Options/Window">Window</a>
             </td>
             <td>
               Window Font and Startup position
@@ -328,7 +328,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_3" title="Options/Language" class="xowa-visited">Language</a>
+              <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_3" title="Options/Language">Language</a>
             </td>
             <td>
               UI Language
@@ -336,7 +336,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_4" title="Options/Tabs" class="xowa-visited">Tabs</a>
+              <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_4" title="Options/Tabs">Tabs</a>
             </td>
             <td>
               Tab appearance and behavior
@@ -344,7 +344,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Startup.html" id="xolnki_5" title="Options/Startup" class="xowa-visited">Startup</a>
+              <a href="http://xowa.org/home/wiki/Options/Startup.html" id="xolnki_5" title="Options/Startup">Startup</a>
             </td>
             <td>
               Application startup options
@@ -402,7 +402,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_11" title="Options/Import" class="xowa-visited">Import</a>
+              <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_11" title="Options/Import">Import</a>
             </td>
             <td>
               Import options
@@ -484,7 +484,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Content_apps.html" id="xolnki_20" title="Options/Content apps" class="xowa-visited">Content Apps</a>
+              <a href="http://xowa.org/home/wiki/Options/Content_apps.html" id="xolnki_20" title="Options/Content apps">Content Apps</a>
             </td>
             <td>
               Content applications (web browser, image viewer, media player)
